<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="world"
        android:key="set_user_name"
        android:title="@string/pref_title_set_name"
        android:summary="@string/pref_sum_set_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_alarm_titles"
        android:entryValues="@array/pref_alarm_values"
        android:key="set_alarm_way"

        android:summary="@string/pref_sum_set_alarm"
        android:title="@string/pref_title_set_alarm" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_lang_titles"
        android:entryValues="@array/pref_lang_values"
        android:key="set_speak_language"

        android:summary="@string/pref_sum_select_language"
        android:title="@string/pref_title_select_language" />

</PreferenceScreen>